# mxtoo

./: .gitignore  Cargo.toml  LICENSE  flake.nix  readme.md
public/: index.css  index.html  index.mjs
src/: main.rs
