[package]
name = "mxtoo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["macros", "ws"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
sysinfo = "0.29.4"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["fs"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
